# persona-spirit

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  TESTS.md  bootstrap-policy.nota  flake.nix  skills.md  spirit-observer.schema  spirit-reading-actor.schema  spirit-recorder.schema  spirit-storage.schema  spirit-supervisor.schema  spirit-upgrade-log.schema
schema/: persona-spirit.concept.schema  spirit-runtime.schema
schema-poc/: Cargo.toml  spirit-observer.schema  spirit-reading-actor.schema  spirit-recorder.schema  spirit-storage.schema  spirit-supervisor.schema  spirit-upgrade-log.schema
schema-poc/src/: daemon.rs  lib.rs  observer.rs  reading_actor.rs  recorder.rs  storage.rs  supervisor.rs  upgrade_log.rs
schema-poc/tests/: constraint_proofs.rs  production_emulation.rs
src/: argument.rs  daemon.rs  error.rs  lib.rs  migration.rs  observation.rs  runtime.rs  store.rs
src/actors/: classifier.rs  clock.rs  decoder.rs  dispatch.rs  ingress.rs  mod.rs  owner.rs  pipeline.rs  policy.rs  reply.rs  root.rs  state.rs  store.rs  subscription.rs  trace.rs
src/schema_driven/: mod.rs  observer.rs  reading_actor.rs  recorder.rs  storage.rs  supervisor.rs
tests/: actor_runtime.rs  boundary.rs  daemon.rs  design_d_routing.rs  full_schema_runtime.rs  migration.rs  sema_projection.rs
