[package]
name         = "persona-spirit"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/persona-spirit"
description  = "Persona psyche to mind interface component."
publish      = false

[lib]
name = "persona_spirit"
path = "src/lib.rs"

[[bin]]
name = "persona-spirit"
path = "src/bin/persona-spirit.rs"

[[bin]]
name = "persona-spirit-daemon"
path = "src/bin/persona-spirit-daemon.rs"

[dependencies]
kameo                       = { git = "https://github.com/LiGoldragon/kameo", branch = "persona-lifecycle-terminal-outcome", default-features = false, features = ["macros", "tracing"] }
nota-codec                  = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
owner-signal-persona-spirit = { git = "https://github.com/LiGoldragon/owner-signal-persona-spirit.git", branch = "main" }
rkyv                        = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
sema                        = { git = "https://github.com/LiGoldragon/sema.git" }
sema-engine                 = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "main" }
signal-core                 = { git = "https://github.com/LiGoldragon/signal-core.git" }
signal-frame                = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-persona-spirit       = { git = "https://github.com/LiGoldragon/signal-persona-spirit.git", branch = "main" }
signal-sema                 = { git = "https://github.com/LiGoldragon/signal-sema.git", branch = "main" }
thiserror                   = "2"
tokio                       = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
