[package]
name         = "spirit-schema-poc"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/persona-spirit"
description  = "Schema-driven POC for persona-spirit (psyche 2026-05-26 + intent records 709, 710 — three languages: wire signal / storage sema / internal channel)."
publish      = false

[lib]
name = "spirit_schema_poc"
path = "src/lib.rs"

[dependencies]
nota-codec                  = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
owner-signal-persona-spirit = { git = "https://github.com/LiGoldragon/owner-signal-persona-spirit.git", branch = "main" }
rkyv                        = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame                = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-persona-spirit       = { git = "https://github.com/LiGoldragon/signal-persona-spirit.git", branch = "main" }
signal-sema                 = { git = "https://github.com/LiGoldragon/signal-sema.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
